--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -33,7 +33,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Services"
+                    android:text="Items"
                     android:textColor="@color/md_theme_light_primary"
                     android:textSize="25sp"
                     app:layout_constraintBottom_toBottomOf="parent"
