--- a/app/src/main/res/layout/fragment_service_list.xml
+++ b/app/src/main/res/layout/fragment_service_list.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.skoda.launcher.ui.viewmodel.ServiceViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,16 +32,6 @@
             app:tabSelectedTextAppearance="@style/TabTextAppearance"
             app:tabTextAppearance="@style/TabTextAppearance">
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:text="Active" />
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ALL" />
-
         </com.google.android.material.tabs.TabLayout>
 
         <ImageView
@@ -49,16 +42,16 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/white_circle_bg"
             android:src="@drawable/ic_back_arrow_black"
-            app:tint="@color/black"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/black" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/service_list_rv"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tab_layout"
