--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -14,7 +14,7 @@
         android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_back_arrow" />
+        android:src="@drawable/ic_back_arrow_black" />
 
     <TextView
         android:id="@+id/title_tv"
