--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,15 +37,14 @@
     </style>
 
     <style name="Toolbar_TextStyle">
-
-        <item name="android:textSize">25dp</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
-
+        <item name="android:fontFamily">@font/skoda_next_bold</item>
     </style>
 
     <style name="TabTextAppearance" parent="TextAppearance.AppCompat.Medium">
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">25sp</item>
     </style>
 
 </resources>
