--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">18.156.191.202</domain>
+        <domain includeSubdomains="true">skoda-services-dev-1394477866.eu-central-1.elb.amazonaws.com</domain>
     </domain-config>
 </network-security-config>
