feat(UI): Added Static payment flow ui/ux

--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.skoda.launcher.ui.viewmodel.ServiceViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
