--- a/app/src/main/res/layout/fragment_payment_review.xml
+++ b/app/src/main/res/layout/fragment_payment_review.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     android:background="#0c1921">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -10,8 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:clickable="true"
-        android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -48,10 +48,10 @@
         app:layout_constraintTop_toBottomOf="@+id/cl_title">
 
         <TextView
-            android:id="@+id/selection_title"
+            android:id="@+id/payment_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your selection"
+            android:text="Review and complete your order"
             android:textColor="@color/white"
             android:textSize="32sp"
             android:textStyle="bold"
@@ -64,170 +64,107 @@
             android:id="@+id/ll_vertical_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
             android:padding="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/selection_title">
+            app:layout_constraintTop_toBottomOf="@+id/payment_title">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:weightSum="3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/selection_title">
-
-                <TextView
-                    android:id="@+id/item"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="left|center_vertical"
-                    android:text="Item"
-                    android:textColor="@color/white"
-                    android:textSize="28sp">
-
-                </TextView>
-
-                <TextView
-                    android:id="@+id/duration"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="Duration"
-                    android:textColor="@color/white"
-                    android:textSize="28sp">
-
-                </TextView>
-
-                <TextView
-                    android:id="@+id/price"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right|center_vertical"
-                    android:text="Price including taxes"
-                    android:textColor="@color/white"
-                    android:textSize="28sp">
-
-                </TextView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:weightSum="3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/selection_title">
-
-                <TextView
-                    android:id="@+id/item_type"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="left|center_vertical"
-                    android:text="Powerpass map"
-                    android:textColor="@color/white"
-                    android:textSize="28sp">
-
-                </TextView>
-
-                <TextView
-                    android:id="@+id/duration_type"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="12 months"
-                    android:textColor="@color/white"
-                    android:textSize="28sp">
-
-                </TextView>
-
-                <TextView
-                    android:id="@+id/price_type"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right|center_vertical"
-                    android:text="12.60$"
-                    android:textColor="@color/white"
-                    android:textSize="28sp">
-
-                </TextView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:weightSum="2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/selection_title">
-
-                <TextView
-                    android:id="@+id/tax_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="left|center_vertical"
-                    android:text="19% MwSt tax"
-                    android:textColor="@color/white"
-                    android:textSize="28sp">
-
-                </TextView>
-
-
-                <TextView
-                    android:id="@+id/tax_amount"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right|center_vertical"
-                    android:text="2,40$"
-                    android:textColor="@color/white"
-                    android:textSize="28sp">
-
-                </TextView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:background="#303132"
                 android:padding="20dp"
-                android:weightSum="2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/selection_title">
 
                 <TextView
-                    android:id="@+id/total_text"
+                    android:id="@+id/payment_vorkasse"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="left|center_vertical"
-                    android:text="Total"
+                    android:text="Alexander Mustermann, Kufurstendamm 12, 10136 Berlin, Deutschland"
                     android:textColor="@color/white"
-                    android:textSize="28sp">
+                    android:textSize="36sp">
+
+                </TextView>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_right_arrow">
+
+                </ImageView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="#303132"
+                android:padding="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/selection_title">
+
+                <TextView
+                    android:id="@+id/payment_paypal"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Paypal: alex******@out****.de"
+                    android:textColor="@color/white"
+                    android:textSize="36sp">
+
+                </TextView>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_right_arrow">
+
+                </ImageView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="#303132"
+                android:padding="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/selection_title">
+
+                <TextView
+                    android:id="@+id/subscription_renew"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Subscription renewal"
+                    android:textColor="@color/white"
+                    android:textSize="36sp">
 
                 </TextView>
 
                 <TextView
-                    android:id="@+id/amount"
-                    android:layout_width="0dp"
+                    android:id="@+id/enabled"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right|center_vertical"
-                    android:text="12.60$"
+                    android:layout_marginEnd="20dp"
+                    android:text="Enabled"
                     android:textColor="@color/white"
-                    android:textSize="28sp">
+                    android:textSize="36sp">
 
                 </TextView>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_right_arrow">
+
+                </ImageView>
 
             </LinearLayout>
         </LinearLayout>
@@ -241,17 +178,80 @@
         android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cl_description">
+        app:layout_constraintTop_toBottomOf="@+id/cl_description"
+        app:layout_constraintVertical_bias="0.8">
 
-
-        <ImageView
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/next_button_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
-            android:src="@drawable/next_button_1"
             app:layout_constraintEnd_toEndOf="parent">
 
-        </ImageView>
+            <ImageView
+                android:id="@+id/back_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="40dp"
+                android:src="@drawable/back_button"
+                app:layout_constraintEnd_toStartOf="@+id/next_button">
+
+            </ImageView>
+
+            <ImageView
+                android:id="@+id/next_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="40dp"
+                android:src="@drawable/btn_order"
+                app:layout_constraintEnd_toEndOf="parent">
+
+            </ImageView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/progress_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/next_button_layout">
+
+            <TextView
+                android:id="@+id/page_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3/3"
+                android:textColor="@color/white"
+                android:textSize="41sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/payment_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:text="Order confirmation"
+                android:textColor="@color/white"
+                android:textSize="41sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/page_indicator">
+
+            </TextView>
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:max="100"
+                android:padding="10dp"
+                android:progress="100"
+                android:progressTint="#78faae"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/page_indicator" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
