--- a/app/src/main/res/layout/activity_car_launcher.xml
+++ b/app/src/main/res/layout/activity_car_launcher.xml
@@ -19,23 +19,12 @@
         android:layoutDirection="ltr"
         tools:context=".ui.activity.CarLauncherActivity">
 
-        <FrameLayout
-            android:id="@+id/toolbar"
+
+        <TextView
+            android:id="@+id/home_ly"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <include layout="@layout/toolbar_layout" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Home" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
