--- a/app/src/main/res/layout/fragment_auto_renewal.xml
+++ b/app/src/main/res/layout/fragment_auto_renewal.xml
@@ -29,6 +29,7 @@
         </TextView>
 
         <ImageView
+            android:id="@+id/back_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
@@ -139,38 +140,12 @@
         app:layout_constraintTop_toBottomOf="@+id/cl_description"
         app:layout_constraintVertical_bias="0.8">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/next_button_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <ImageView
-                android:id="@+id/back_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="40dp"
-                android:src="@drawable/back_button"
-                app:layout_constraintEnd_toStartOf="@+id/next_button">
-
-            </ImageView>
-
-            <ImageView
-                android:id="@+id/next_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="40dp"
-                android:src="@drawable/next_button_1"
-                app:layout_constraintEnd_toEndOf="parent">
-
-            </ImageView>
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/progress_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/next_button_layout">
+            >
 
             <TextView
                 android:id="@+id/page_indicator"
@@ -178,7 +153,9 @@
                 android:layout_height="wrap_content"
                 android:text="2/3"
                 android:textColor="@color/white"
-                android:textSize="41sp"
+                android:textSize="30sp"
+                android:paddingTop="25dp"
+                android:paddingLeft="15dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent">
 
@@ -189,13 +166,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
-                android:text="Payment information"
+                android:text="Subscription method"
                 android:textColor="@color/white"
-                android:textSize="41sp"
+                android:paddingTop="35dp"
+                android:textSize="25sp"
                 android:textStyle="bold"
+                android:paddingRight="20dp"
                 app:layout_constraintStart_toEndOf="@+id/page_indicator">
 
             </TextView>
+            
+            <ImageView
+                android:id="@+id/back_btn_prev"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                app:layout_constraintEnd_toStartOf="@id/next_button"
+                android:layout_marginEnd="40dp"
+                android:src="@drawable/back_button">
+            </ImageView>
+            
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/next_button"
+                android:layout_width="170dp"
+                android:layout_height="match_parent"
+                android:padding="5dp"
+                android:layout_marginEnd="25dp"
+                android:textSize="30dp"
+                android:text="Next"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent">
+
+            </com.google.android.material.button.MaterialButton>
+
 
             <ProgressBar
                 android:id="@+id/progress_bar"
