--- a/app/src/main/res/layout/activity_car_launcher.xml
+++ b/app/src/main/res/layout/activity_car_launcher.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
 
@@ -20,11 +19,18 @@
         tools:context=".ui.activity.CarLauncherActivity">
 
 
-        <TextView
-            android:id="@+id/home_ly"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/menu_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginHorizontal="50dp"
             android:gravity="center"
-            android:text="Home" />
+            android:text="Home"
+            tools:itemCount="10"
+            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            tools:listitem="@layout/setting_menu_item"
+            tools:orientation="vertical"
+            tools:scrollbars="vertical"
+            tools:spanCount="5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
