--- a/app/src/main/res/layout/fragment_service_list.xml
+++ b/app/src/main/res/layout/fragment_service_list.xml
@@ -36,15 +36,13 @@
 
         <ImageView
             android:id="@+id/back_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="25dp"
-            android:background="@drawable/white_circle_bg"
-            android:src="@drawable/ic_back_arrow_black"
+            android:src="@drawable/ic_back_btn_white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/black" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/service_list_rv"
