--- a/app/src/main/res/layout/fragment_service_purchase.xml
+++ b/app/src/main/res/layout/fragment_service_purchase.xml
@@ -29,6 +29,7 @@
         </TextView>
 
         <ImageView
+            android:id="@+id/back_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="40dp"
@@ -244,14 +245,17 @@
         app:layout_constraintTop_toBottomOf="@+id/cl_description">
 
 
-        <ImageView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
-            android:src="@drawable/next_button_1"
+            android:layout_width="170dp"
+            android:layout_height="match_parent"
+            android:padding="7dp"
+            android:layout_marginEnd="25dp"
+            android:textSize="30dp"
+            android:text="Next"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent">
 
-        </ImageView>
+        </com.google.android.material.button.MaterialButton>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
