--- a/app/src/main/res/layout/service_list_item.xml
+++ b/app/src/main/res/layout/service_list_item.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
         app:cardBackgroundColor="#2f383d"
         app:cardElevation="10dp">
 
@@ -30,11 +31,11 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/sub_service_bg"
-                app:layout_constraintBottom_toBottomOf="@+id/service_art_iv"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"/>
+                app:layout_constraintBottom_toBottomOf="@+id/service_art_iv" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -51,24 +52,25 @@
                 android:id="@+id/app_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/app"
                 android:textColor="#ADB1B4"
+                android:textSize="22dp"
                 app:layout_constraintTop_toBottomOf="@+id/service_art_iv" />
 
             <TextView
-                android:fontFamily="@font/skoda_next_bold"
                 android:id="@+id/service_title_iv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="70dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
-                tools:text="AMBIENT LIGHT"
-                android:textSize="24dp"
+                android:fontFamily="@font/skoda_next_bold"
+                android:minHeight="70dp"
                 android:textColor="@color/white"
-                app:layout_constraintTop_toBottomOf="@+id/app_tv" />
+                android:textSize="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/app_tv"
+                tools:text="AMBIENT LIGHT" />
 
 
             <TextView
@@ -80,10 +82,10 @@
                 android:drawableStart="@drawable/ic_clock"
                 android:drawablePadding="20dp"
                 android:padding="5dp"
-                tools:text="Expires in 10 days"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@+id/service_title_iv" />
+                app:layout_constraintTop_toBottomOf="@+id/service_title_iv"
+                tools:text="Expires in 10 days" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
